force-app/main/default/objects/Contract__c/fields/Consent_Forms_Signed__c.field-meta.xml
<CustomField>
    <fullName>Consent_Forms_Signed__c</fullName>
    <label>Consent Forms Signed</label>
    <type>Checkbox</type>
    <description>Have consent forms been signed</description>
    <defaultValue>false</defaultValue>
</CustomField>