force-app/main/default/objects/Contract__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <label>Contract End Date</label>
    <type>Date</type>
    <inlineHelpText>Contract end date (if applicable)</inlineHelpText>
</CustomField>