force-app/main/default/objects/Contract__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <label>Contract Start Date</label>
    <type>Date</type>
    <description>Contract start date</description>
</CustomField>