force-app/main/default/objects/Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <inlineHelpText>Type of contract</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Respite Agreement</fullName>
            </value>
            <value>
                <fullName>Permanent Residence</fullName>
            </value>
            <value>
                <fullName>Trial Period</fullName>
            </value>
            <value>
                <fullName>Local Authority Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>