force-app/main/default/objects/Contract__c/fields/Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount__c</fullName>
    <label>Deposit Amount</label>
    <type>Currency</type>
    <description>Security deposit amount</description>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>