force-app/main/default/objects/Contract__c/fields/Direct_Debit_Form_Signed__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Form_Signed__c</fullName>
    <label>Direct Debit Form Signed</label>
    <type>Checkbox</type>
    <description>Has direct debit form been signed</description>
    <defaultValue>false</defaultValue>
</CustomField>