force-app/main/default/objects/Contract__c/fields/Final_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Date__c</fullName>
    <label>Final Invoice Date</label>
    <type>Date</type>
    <inlineHelpText>Date of final invoice</inlineHelpText>
</CustomField>