force-app/main/default/objects/Contract__c/fields/Financial_Assessment_Attached__c.field-meta.xml
<CustomField>
    <fullName>Financial_Assessment_Attached__c</fullName>
    <label>Financial Assessment Attached</label>
    <type>Checkbox</type>
    <description>Is financial assessment attached</description>
    <defaultValue>false</defaultValue>
</CustomField>