force-app/main/default/objects/Contract__c/fields/GP_Letter_Attached__c.field-meta.xml
<CustomField>
    <fullName>GP_Letter_Attached__c</fullName>
    <label>GP Letter Attached</label>
    <type>Checkbox</type>
    <description>Is GP letter attached</description>
    <defaultValue>false</defaultValue>
</CustomField>