force-app/main/default/objects/Contract__c/fields/Notice_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period_Days__c</fullName>
    <label>Notice Period (Days)</label>
    <type>Number</type>
    <description>Notice period in days</description>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>