force-app/main/default/objects/Contract__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Related Opportunity</label>
    <type>Lookup</type>
    <description>Related opportunity</description>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>