force-app/main/default/objects/Contract__c/fields/Payment_Day__c.field-meta.xml
<CustomField>
    <fullName>Payment_Day__c</fullName>
    <label>Payment Day</label>
    <type>Picklist</type>
    <inlineHelpText>Payment day</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>1st of Month</fullName>
            </value>
            <value>
                <fullName>15th of Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>