force-app/main/default/objects/Contract__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <label>Resident</label>
    <type>Lookup</type>
    <description>Resident for this contract</description>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>