force-app/main/default/objects/Contract__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <label>Sent Date</label>
    <type>Date</type>
    <inlineHelpText>Date when contract was sent</inlineHelpText>
</CustomField>