force-app/main/default/objects/Contract__c/fields/Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Signed_By__c</fullName>
    <label>Signed By</label>
    <type>Lookup</type>
    <description>Person who signed the contract</description>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Signed By)</relationshipLabel>
    <relationshipName>Contracts_Signed</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>