force-app/main/default/objects/Contract__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <label>Signed Date</label>
    <type>Date</type>
    <inlineHelpText>Date when contract was fully signed</inlineHelpText>
</CustomField>