force-app/main/default/objects/Contract__c/fields/Termination_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Notice_Date__c</fullName>
    <label>Termination Notice Date</label>
    <type>Date</type>
    <inlineHelpText>Date when termination notice was given</inlineHelpText>
</CustomField>