force-app/main/default/objects/Contract__c/fields/Termination_Notice_Given_By__c.field-meta.xml
<CustomField>
    <fullName>Termination_Notice_Given_By__c</fullName>
    <label>Termination Notice Given By</label>
    <type>Lookup</type>
    <description>Person who gave termination notice</description>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Terminated By)</relationshipLabel>
    <relationshipName>Contracts_Terminated</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>