force-app/main/default/objects/Contract__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <inlineHelpText>Reason for termination</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resident Request</fullName>
            </value>
            <value>
                <fullName>Family Request</fullName>
            </value>
            <value>
                <fullName>Medical Needs Changed</fullName>
            </value>
            <value>
                <fullName>Facility Unsuitable</fullName>
            </value>
            <value>
                <fullName>Non-Payment</fullName>
            </value>
            <value>
                <fullName>Behavioral Issues</fullName>
            </value>
            <value>
                <fullName>Passed Away</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>