force-app/main/default/objects/Contract__c/fields/Third_Party_Top_Up_Amount__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Top_Up_Amount__c</fullName>
    <label>Third Party Top Up Amount</label>
    <type>Currency</type>
    <description>Third party top up amount</description>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>