force-app/main/default/objects/Contract__c/fields/Third_Party_Top_Up_Payer__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Top_Up_Payer__c</fullName>
    <label>Third Party Top Up Payer</label>
    <type>Lookup</type>
    <description>Person paying third party top up</description>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Top Up Payer)</relationshipLabel>
    <relationshipName>Contracts_TopUp</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>