force-app/main/default/objects/Contract__c/fields/Weekly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Rate__c</fullName>
    <label>Weekly Rate</label>
    <type>Currency</type>
    <description>Weekly care fee</description>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>